# web-page-load-test

./: .gitignore  Makefile  README.md  example.py  pyproject.toml
src/: make_simulation_report.py  simulate_browsing.py
tests/: conftest.py  test_browser_page_load.py
tests/data/: links.csv
